infrastructure/k8s/c2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-c2
  labels:
    name: petclinic-c2
    cluster: c2
